// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders without crashing 1`] = `
<div>
  <div />
  <div>
    <div
      className="cobalt-modal-mask"
    />
    <div
      aria-describedby="dialogModalTestDesc"
      aria-labelledby="dialogModalTestTitle"
      className="cobalt-modal-wrap"
      onClick={[Function]}
      role="dialog"
    >
      <div
        className="cobalt-modal"
        onClick={[Function]}
      >
        <div
          className="cobalt-modal-header"
        >
          <div
            className="cobalt-modal-title"
            id="dialogModalTestTitle"
          />
          <button
            className="cobalt-modal-close"
            onClick={[Function]}
          >
            <span
              className="cobalt-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
              >
                close.svg
              </svg>
            </span>
          </button>
        </div>
        <div
          className="cobalt-modal-body"
          id="dialogModalTestDesc"
        >
          Here is content of Modal
        </div>
        <div
          className="cobalt-modal-footer"
        >
          <button
            className="cobalt-button cobalt-button-default"
            onClick={[Function]}
          >
            Cancel
          </button>
          <button
            className="cobalt-button cobalt-button-primary"
            onClick={[Function]}
          >
            OK
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders without footer 1`] = `
<div>
  <div />
  <div>
    <div
      className="cobalt-modal-mask"
    />
    <div
      aria-describedby="dialogModalTestDesc"
      aria-labelledby="dialogModalTestTitle"
      className="cobalt-modal-wrap"
      onClick={[Function]}
      role="dialog"
    >
      <div
        className="cobalt-modal"
        onClick={[Function]}
      >
        <div
          className="cobalt-modal-header"
        >
          <div
            className="cobalt-modal-title"
            id="dialogModalTestTitle"
          />
          <button
            className="cobalt-modal-close"
            onClick={[Function]}
          >
            <span
              className="cobalt-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
              >
                close.svg
              </svg>
            </span>
          </button>
        </div>
        <div
          className="cobalt-modal-body"
          id="dialogModalTestDesc"
        >
          Here is content of Modal
        </div>
      </div>
    </div>
  </div>
</div>
`;
